--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = icu4c
-url = http://download.icu-project.org/files/icu4c/63.1/icu4c-63_1-src.tgz
+url = https://github.com/unicode-org/icu/releases/download/release-64-2/icu4c-64_2-src.tgz
 archives = 
 giturl = 
 
