--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = icu4c
 url = https://github.com/unicode-org/icu/releases/download/release-64-2/icu4c-64_2-src.tgz
 archives = 
-giturl = 
+giturl = https://github.com/unicode-org/icu.git
 
 [autospec]
 # build 32 bit libraries
@@ -33,6 +33,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not generate debuginfo for this package
+nodebug = false
 # disable stripping binaries
 nostrip = false
 # optimize build for size over speed
