--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = icu4c
-url = https://github.com/unicode-org/icu/releases/download/release-67-1/icu4c-67_1-src.tgz
+url = https://github.com/unicode-org/icu/releases/download/release-70-1/icu4c-70_1-src.tgz
 archives = 
 giturl = https://github.com/unicode-org/icu.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = true
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
@@ -60,5 +62,5 @@ use_clang = false
 # configure build for lto
 use_lto = true
 # require package verification for build
-verify_required = true
+verify_required = false
 
