--- a/options.conf
+++ b/options.conf
@@ -23,7 +23,7 @@ altcargo1 = false
 # enable cargo local with full lto
 altcargo1_lto = false
 # alternative pgo flags
-altflags_pgo = false
+altflags_pgo = true
 # alternative pgo 32bits flags
 altflags_pgo_32 = false
 # alternative pgo flags for profiling outside chroot
@@ -41,7 +41,7 @@ broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
 # configure build with special options
-build_special = false
+build_special = true
 # configure build with special options 2
 build_special2 = false
 # configure 32bits build with special options
